--- a/src/pyhub/rag/templates/rag/head.html
+++ b/src/pyhub/rag/templates/rag/head.html
@@ -4,3 +4,4 @@
 <script src="{% static 'rag/htmx/2.0.4/htmx.min.js' %}"></script>
 <script src="{% static 'rag/htmx-ext/ws/2.0.1/ws.js' %}"></script>
 <script src="{% static 'rag/htmx-ext/ws/register.js' %}"></script>
+<script src="{% static 'rag/markdown.js' %}"></script>
