--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,20 @@
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 /* Light mode image border */
 [data-md-color-scheme="default"] article img:not(.twemoji) {
     border: 0.5px solid #e0e0e0;
@@ -6,4 +23,8 @@
 /* Dark mode image border */
 [data-md-color-scheme="slate"] article img:not(.twemoji) {
     border: 0.5px solid #4a4a4a;
+}
+
+article img[src$="#noborder"] {
+  border: 0 !important;
 }
